Several bugfixes and improvements (user that register now have the correct language, country icons now visible in admin interface, renamed locale session key, added forum installer code)

--- a/public/frontend.css
+++ b/public/frontend.css
@@ -101,11 +101,11 @@ h1.page-title { }
 .page-videos .video { float: left; width: 33%; text-align: center; }
 .page-videos .video img { width: 90% }
 
-.page-streams .stream-player iframe { width: 100%; border: none }
+.page-videos .video-player iframe { width: 100%; border: none }
 
 .widget-videos img.cover { max-width: 100% }
 
-.page-streams .video-player iframe { width: 100%; border: none }
+.page-streams .stream-player iframe { width: 100%; border: none }
 
 .page-galleries .galleries .item { float: left; display: block; width: 20%; height: 100px; overflow: hidden }
 .page-galleries .galleries .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
